--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
-  "keywords": ["sensor", "gps", "accelerometer"],
+  "keywords": [
+    "sensor",
+    "gps",
+    "accelerometer"
+  ],
   "author": "",
   "license": "MIT",
   "dependencies": {
@@ -18,6 +22,6 @@
     "nodemon": "^3.0.1"
   },
   "engines": {
-    "node": ">=14.0.0"
+    "node": ">=18.0.0"
   }
 }
