--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: sensor-data-backend
     env: node
     plan: free
-    buildCommand: npm run build
+    buildCommand: npm install
     startCommand: npm start
     envVars:
       - key: NODE_VERSION
