--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,39 @@
-node_modules
+# Node modules
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Firebase Admin SDK credentials
+firebase-admin-key.json
+serviceAccountKey.json
+*-firebase-adminsdk-*.json
+
+# CSV exports
+*.csv
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Logs
+logs/
+*.log
+
+# Build files
+dist/
+build/
